<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HigherLowerActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:text="@string/introText"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgDice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:src="@drawable/dice1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/txtLastThrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:text="@string/txtLastThrow"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintBottom_toTopOf="@+id/btnEqual"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgDice"
        app:layout_constraintVertical_bias="0.049" />

    <Button
        android:id="@+id/btnEqual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:text="@string/btnEqual"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnLower"
        android:layout_width="95dp"
        android:layout_height="45dp"
        android:text="@string/btnLower"
        app:layout_constraintBottom_toBottomOf="@+id/btnEqual"
        app:layout_constraintEnd_toStartOf="@+id/btnEqual"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnHigher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnHigher"
        app:layout_constraintBottom_toBottomOf="@+id/btnEqual"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.621"
        app:layout_constraintStart_toEndOf="@+id/btnEqual" />

</androidx.constraintlayout.widget.ConstraintLayout>